kubernetes/apps/minecraft/router/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft-router
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: minecraft
    - name: internal
      namespace: networking
      sectionName: minecraft
  rules:
    - backendRefs:
        - name: minecraft-router
          port: 25565
